# rvm

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  MVP_COMPLETION.md  MVP_SPEC.md  README.md  REPL.md  install.sh  test_compiler3.forge  tmp_helper.txt
.claude/: settings.local.json
.claude/agents/: forge-implementer.md  forge-reviewer.md  forge-spec-validator.md  forge-tester.md
.claude/commands/: docker-smoke.md  forge-next.md  forge-phase.md  forge-spec-check.md  forge-status.md  forge-task.md  release.md
.claude/skills/: forge-phase.md
.github/workflows/: release.yml
UAT/: hello.forge
blog/: old.md
crates/: CRATES.md
crates/bloom-compiler/: Cargo.toml
crates/crucible-cli/: Cargo.toml
crates/crucible-cli/src/: config.rs  init.rs  main.rs  make.rs  migrate.rs  schema.rs
crates/crucible-cli/src/models/: blog_post.forge  user.forge
crates/crucible-cli/src/repositories/: user_repository.forge
crates/e2e-tests/: Cargo.toml
crates/ember-runtime/: Cargo.toml
crates/ember-runtime/src/: app.rs  ecs.rs  input.rs  lib.rs  native.rs  physics.rs  render.rs  wasm.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/fixtures/: data_validate.forge  enum_basic.forge  enum_match.forge  mixin_basic.forge  test_fail.forge  test_pass.forge  trait_basic.forge  typestate_connection.forge  typestate_door.forge
crates/forge-cli/fixtures/modules/basic/utils/: helper.forge
crates/forge-cli/fixtures/modules/circular/: a.forge  b.forge
crates/forge-cli/fixtures/modules/mod_forge/: main.forge
crates/forge-cli/fixtures/modules/mod_forge/math/: basic.forge  mod.forge
crates/forge-cli/fixtures/modules/pub_visibility/: main.forge
crates/forge-cli/src/: arch_check.rs  forge_toml.rs  hot_reload.rs  main.rs  new.rs  templates.rs
crates/forge-cli/templates/anvil/: forge.toml  settings.json.example
crates/forge-cli/templates/anvil-clean/: forge.toml
crates/forge-cli/templates/anvil-clean/src/: main.forge
crates/forge-cli/templates/anvil-clean/src/domain/: user.forge
crates/forge-cli/templates/anvil-clean/src/infrastructure/: mod.forge  postgres_user_repository.forge
crates/forge-cli/templates/anvil-clean/src/interface/: mod.forge  user_handler.forge
crates/forge-cli/templates/anvil-clean/src/usecase/: mod.forge  register_user_usecase.forge
crates/forge-cli/templates/anvil/src/: auth.forge  cors.forge  main.forge  middleware.forge  request.forge  response.forge  router.forge
crates/forge-cli/templates/bloom/: forge.toml
crates/forge-cli/templates/bloom/src/app/: layout.bloom
crates/forge-cli/templates/bloom/src/components/: counter.bloom
crates/forge-cli/templates/bloom/src/stores/: counter.flux.bloom
crates/forge-cli/templates/clean-arch/src/: main.forge
crates/forge-cli/templates/clean-arch/src/domain/: mod.forge  user.forge
crates/forge-cli/templates/clean-arch/src/infrastructure/: mod.forge  postgres_user_repository.forge  smtp_email_service.forge
crates/forge-cli/templates/clean-arch/src/interface/: user_handler.forge
crates/forge-cli/templates/clean-arch/src/usecase/: register_user_usecase.forge
crates/forge-cli/templates/clean-arch/tests/: register_user_test.forge
crates/forge-cli/templates/cli/src/: main.forge
crates/forge-cli/templates/data/src/: main.forge
crates/forge-cli/templates/lib/: forge.toml
crates/forge-cli/templates/lib/src/: lib.forge
crates/forge-cli/templates/script/src/: main.forge
crates/forge-cli/tests/: anvil_lifecycle_e2e.rs  arch_check_e2e.rs  build_toml_e2e.rs  container_e2e.rs  debugger_e2e.rs  decorator_e2e.rs  di6_e2e.rs  e2e.rs  new_e2e.rs  run_test_toml_e2e.rs
crates/forge-compiler/: Cargo.toml
crates/forge-dap/: Cargo.toml
crates/forge-dap/src/: adapter.rs  lib.rs  main.rs  protocol.rs  source_map.rs  tests.rs
crates/forge-goblet/: Cargo.toml
crates/forge-lsp/: Cargo.toml
crates/forge-lsp/src/: backend.rs  lib.rs  main.rs
crates/forge-mcp/: Cargo.toml
crates/forge-notebook/: Cargo.toml
crates/forge-stdlib/: Cargo.toml
crates/forge-stdlib/src/: builtins.rs  cache.rs  compress.rs  config.rs  crypto.rs  env.rs  event.rs  fs.rs  http.rs  io.rs  json.rs  lib.rs  log.rs  metrics.rs  net.rs  pipeline.rs  process.rs  random.rs  regex.rs  retry.rs  string.rs  uuid.rs  wasm.rs
crates/forge-stdlib/tests/: cache.rs  collections.rs  compress.rs  config.rs  crypto.rs  env.rs  event.rs  fs.rs  http.rs  io.rs  json.rs  log.rs  metrics.rs  net.rs  process.rs  random.rs  regex.rs  retry.rs  string.rs  uuid.rs  wasm.rs
crates/forge-stdlib/tests/fixtures/wasm/: README.md  add.c  add.cpp  echo.c
crates/forge-validator/: Cargo.toml
crates/forge-vm/: Cargo.toml
crates/forge-vm/src/: interpreter.rs  lib.rs  value.rs
crates/fs-ast/: Cargo.toml
crates/fs-bytecode/: Cargo.toml
crates/fs-cli/: Cargo.toml
crates/fs-cli/src/: main.rs
crates/fs-cli/tests/: integration.rs
crates/fs-compiler/: Cargo.toml
crates/fs-lexer/: Cargo.toml
crates/fs-parser/: Cargo.toml
crates/fs-repl/: Cargo.toml
crates/rvm-core/: Cargo.toml
crates/rvm-host/: Cargo.toml
crates/rvm-runtime/: Cargo.toml
dev/: convention-apps.md  convention-roadmap.md  design-decisions.md  design-v2.md  design-v3.md  glossary.md  ideas.md  plan.md  registry.md  tasks.md
docker/: Dockerfile  crucible_test_setup.sql  docker-compose.test.yml  docker-compose.yml  smoke_test.sh
editors/vscode/: forge-vscode-0.1.0.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json
ext/: tasks.md
fixtures/: README.md  demo_calc.fs  hello.forge  hello.fs  print_test.fs  repl_test.txt  sample.fs
forge/: ROADMAP.md  future_task_20260330.md  spec_v0.0.1.md  tasks.md
forge-cli/: Cargo.toml
forge-compiler/: Cargo.toml
forge-transpiler/: Cargo.toml
forge-vm/: Cargo.toml
forge-vscode/: package.json
idea/: note.md
lang/: ROADMAP.md  app_ideas.md  architecture.md  extend_idea.md  future_task_20260330.md  transpiler_perf.md
scripts/: ci-check.ps1
usage/: README.md  cli.md  errors.md  examples.md  language-reference.md  quick-start.md  repl.md
web-ui/: idea.md
(+220 files in other folders)
