[workspace]
resolver = "2"
members = [
    # 言語コア
    "crates/forge-compiler",
    "crates/forge-goblet",
    "crates/forge-lsp",
    "crates/forge-vm",
    "crates/forge-stdlib",
    "crates/forge-transpiler",
    "crates/forge-cli",
    "crates/forge-mcp",
    # パッケージ Rust 実装（packages/ 配下の ForgeScript パッケージを支えるクレート）
    "crates/crucible-cli",
    # 将来追加:
    # "crates/ember-runtime",   # Ember ゲームエンジン（wgpu + rapier）
    # "crates/bloom-runtime",   # Bloom UI ランタイム（DOM ブリッジ）
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["RVM Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# 共通の依存関係は必要に応じて追加

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
