[package]
name = "ember-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["native"]
native = []
wasm = [
    "dep:console_error_panic_hook",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]

[dependencies]
ab_glyph = "0.2"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
pollster = "0.3"
web-time = "0.2"
wgpu = { version = "0.20", features = ["webgpu"] }
winit = "0.29"

console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Node",
    "Window",
] }
rapier2d = "0.26.1"
