[package]
name = "forge-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forge-new"
path = "src/main.rs"

[dependencies]
forge-compiler = { path = "../forge-compiler" }
forge-vm = { path = "../forge-vm" }
forge-stdlib = { path = "../forge-stdlib" }
forge-transpiler = { path = "../forge-transpiler" }
toml = "0.8"

tempfile = "3"

[dev-dependencies]
