[package]
name = "forge-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forge-new"
path = "src/main.rs"

[dependencies]
forge-compiler = { path = "../forge-compiler" }
forge-goblet = { path = "../forge-goblet" }
forge-lsp = { path = "../forge-lsp" }
forge-vm = { path = "../forge-vm" }
forge-stdlib = { path = "../forge-stdlib" }
forge-transpiler = { path = "../forge-transpiler" }
forge-mcp = { path = "../forge-mcp" }
forge-notebook = { path = "../forge-notebook" }
toml = "0.8"
chrono = "0.4"
serde_json = "1"

tempfile = "3"

[dev-dependencies]
