[package]
name = "forge-dap"
version = "0.1.0"
edition = "2021"
description = "Debug Adapter Protocol (DAP) server for ForgeScript"

[[bin]]
name = "forge-dap"
path = "src/main.rs"

[dependencies]
forge-compiler = { path = "../forge-compiler" }
forge-vm = { path = "../forge-vm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
