[package]
name = "forge-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forge-lsp"
path = "src/main.rs"

[dependencies]
forge-compiler = { path = "../forge-compiler" }
forge-goblet = { path = "../forge-goblet" }
lsp-types = "0.95"
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20"
