[package]
name = "forge-stdlib"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-vm = { path = "../forge-vm" }
serde_json = { version = "1", features = ["preserve_order"] }
csv = "1"
dotenvy = "0.15"
signal-hook = { version = "0.3", features = ["iterator"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
regex = "1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.7"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
sha2 = "0.10"
hmac = "0.12"
blake3 = "1"
flate2 = "1"
brotli = "8"
ed25519-dalek = "2"
wasmtime = "28"

[dev-dependencies]
mockito = "1"
wat = "1"
