[package]
name = "forge-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-compiler = { path = "../forge-compiler" }
serde_json = "1"
csv = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
mockito = "1"
